--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -8,12 +8,17 @@
   <% @jobs.each do |job| %>
   <tr>
     <td>
+      <%= render_job_status(job) %>
+      
       <%= link_to(job.title, admin_jobs_path) %>
     </td>
     <td>
       <%= link_to("编辑", edit_admin_job_path(job)) %>
       <%= link_to("删除", admin_job_path(job), :method => :delete, :data => { :confirm => "你确定吗？" }) %>
     </td>
+    <!-- <td>
+
+    </td> -->
     <td>
       <%= job.created_at %>
     </td>
