--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -9,16 +9,21 @@
   <tr>
     <td>
       <%= render_job_status(job) %>
-      
-      <%= link_to(job.title, admin_jobs_path) %>
+
+      <%= link_to(job.title, admin_job_path(job)) %>
     </td>
     <td>
       <%= link_to("编辑", edit_admin_job_path(job)) %>
       <%= link_to("删除", admin_job_path(job), :method => :delete, :data => { :confirm => "你确定吗？" }) %>
-    </td>
-    <!-- <td>
 
-    </td> -->
+      <% if job.is_hidden %>
+
+         <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+      <% else %>
+         <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+      <% end %>
+    </td>
+
     <td>
       <%= job.created_at %>
     </td>
