--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -4,7 +4,8 @@
 
 <br></br>
 
-<table class="table table-boldered" >
+<!-- <table class="table table-boldered" > -->
+<table class="table table-boldered table-striped custab" >
   <thead>
     <tr>
       <td> 职缺 </td>
@@ -26,14 +27,18 @@
     <td> <%= job.wage_lower_bound %> </td>
     <td> <%= job.wage_upper_bound %> </td>
     <td>
-      <%= link_to("编辑", edit_admin_job_path(job)) %>
-      <%= link_to("删除", admin_job_path(job), :method => :delete, :data => { :confirm => "你确定吗？" }) %>
+      <%#= link_to("编辑", edit_admin_job_path(job)) %>
+      <%#= link_to("删除", admin_job_path(job), :method => :delete, :data => { :confirm => "你确定吗？" }) %>
+      <%= link_to("编辑", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
+      <%= link_to("删除", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "你确定吗？"}) %>
 
       <% if job.is_hidden %>
 
-         <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+         <%#= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+         <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-success") %>
       <% else %>
-         <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+         <%#= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+         <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-warning") %>
       <% end %>
     </td>
 
