--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,41 @@
-<h1> Hello World! </h1>
+<div class="jumbotron">
+  <h1 class="title">Start Fire</h1>
+  <p class="slogan">Start fire 是点燃你梦想的地方
+    <br>
+    因为我们喜欢，所以工作，做我们想做的！
+    <br>
+    点燃自己的梦想，过真正的生活！
+  </p>
+  <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
+</div>
+
+<section id="company">
+  <div class = "container-fluid">
+    <div class="row">
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="http://y.photo.qq.com/img?s=VfqbvmFVI&l=y.jpg" alt="search" class = "img-thhumbnail">
+          <div class="caption">
+            <h3>北京朝阳建外SOHO</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="http://y.photo.qq.com/img?s=9yBkCQVj7&l=y.jpg" alt="bid" class = "img-thhumbnail">
+          <div class="caption">
+            <h3>info@18koffer.com</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="http://y.photo.qq.com/img?s=bAQJ8dfF4&l=y.jpg" alt="heart" class = "img-thhumbnail">
+          <div class="caption">
+            <h3>010-12344321</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
