revise job form

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,6 +7,13 @@
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
+    
+    <style>
+      .bg-1 {
+       background-color: #1abc9c; /* Green */
+       color: #ffffff;
+       }
+    </style>
 
     <body>
       <div class="container-fluid">
@@ -30,4 +37,5 @@
       <%= render "common/footer" %>
 
     </body>
+<h3> i am a hero </h3>
 </html>
