--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get group for better mobile display -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="/"> Fly Place </a>
+        <a class="navbar-brand" href="/"> 撸 袖 干 </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
