--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h1 class="title">Start Fire</h1>
-  <p class="slogan">Start fire 是点燃你梦想的地方
+  <h1 class="title">撸袖干</h1>
+  <p class="slogan"> 是点燃你梦想的地方
     <br>
     因为我们喜欢，所以工作，做我们想做的！
     <br>
@@ -24,7 +24,7 @@
         <div class="thumbnail">
           <img src="http://y.photo.qq.com/img?s=9yBkCQVj7&l=y.jpg" alt="bid" class = "img-thhumbnail">
           <div class="caption">
-            <h3>info@18koffer.com</h3>
+            <h3>luxiugan.com</h3>
           </div>
         </div>
       </div>
