--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,15 +115,15 @@
 }
 
 .jumbotron {
-  background-image:url('https://ww4.sinaimg.cn/large/006tKfTcjw1fc5630u7ntj31kw0r3tf4.jpg');
+  background-image:url('https://ww4.sinaimg.cn/large/006tKfTcgy1fc7xj11jyaj308c05jmxf.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 110px;
 }
 
 .title {
-  font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑；cursive;
-  text-align: left;
+  font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑;
+  text-align: center;
   margin-top: 200px;
   margin-bottom: 80px;
 }
@@ -132,26 +132,26 @@
   margin-top: 10px;
   margin-bottom: 50px;
   text-align: center;
-  color: white;
+  color: black;
   top: 12px;
 }
 
 .lead {
   margin-bottom: 60px;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 .caption {
-  margin: 30px;
+  margin: 15px;
   text-align: center;
-  top: 20px;
+  top: 10px;
 }
 
 .thumbnail {
     border: 0 none;
     box-shadow: none;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 .custab{
   border: 1px solid #ccc;
